Added a navigation toolbar

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,6 @@
+<mat-toolbar color="primary" class="app-toolbar">
+  <button mat-button routerLink="/">Manage Subscriptions</button>
+  <button mat-button routerLink="/add-subscription">Add New Subscription</button>
+</mat-toolbar>
+
 <router-outlet></router-outlet>
