--- a/frontend/src/app/components/subscription-list/subscription-list.component.html
+++ b/frontend/src/app/components/subscription-list/subscription-list.component.html
@@ -2,7 +2,6 @@
   <h1 class="title">Manage Hotel Subscriptions</h1>
   <div class="table-container">
     <table mat-table [dataSource]="this.dataSource" matSort class="mat-elevation-z8">
-
       <ng-container matColumnDef="hotelId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Hotel ID</th>
         <td mat-cell *matCellDef="let element">{{ element.hotelId }}</td>
@@ -26,14 +25,12 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Actions </th>
         <td mat-cell *matCellDef="let element">
-          <button mat-button (click)="restartSubscription(element.id)" [disabled]="!(element.status === 'CANCELED' || element.status === 'EXPIRED')">Restart</button>
-          <button mat-button color="warn" (click)="cancelSubscription(element.id)" [disabled]="element.status !== 'ACTIVE'">Cancel</button>
+          <button mat-button (click)="viewDetails(element)">View Details</button>
         </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns; trackBy: trackById"></tr>
-
+      <tr mat-row *matRowDef="let row; columns: displayedColumns; trackBy: trackById" (click)="viewDetails(row)"></tr>
     </table>
 
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons [pageSize]="5" [length]="this.dataSource.data.length"></mat-paginator>
