--- a/frontend/src/app/components/subscription-list/subscription-list.component.html
+++ b/frontend/src/app/components/subscription-list/subscription-list.component.html
@@ -1,34 +1,42 @@
 <div class="content">
   <h1 class="title">Manage Hotel Subscriptions</h1>
+  <div class="filter-container">
+    <mat-form-field appearance="fill">
+      <mat-select placeholder="Status" [(value)]="selectedStatus" (selectionChange)="onStatusChange($event)">
+        <mat-option *ngFor="let status of statusOptions" [value]="status">{{ status }}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-select placeholder="Month" [(value)]="selectedMonth" (selectionChange)="onMonthChange($event)">
+        <mat-option *ngFor="let month of monthOptions" [value]="month">{{ month }}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <button mat-button class="reset-filters-button" (click)="resetFilters()">Reset Filters</button>
+  </div>
   <div class="table-container">
-    <table mat-table [dataSource]="this.dataSource" matSort class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
       <ng-container matColumnDef="hotelId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Hotel ID</th>
         <td mat-cell *matCellDef="let element">{{ element.hotelId }}</td>
       </ng-container>
-
       <ng-container matColumnDef="startDate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Start Date</th>
         <td mat-cell *matCellDef="let element">{{ element.startDate | date }}</td>
       </ng-container>
-
       <ng-container matColumnDef="nextPayment">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Next Payment</th>
         <td mat-cell *matCellDef="let element">{{ element.nextPayment | date }}</td>
       </ng-container>
-
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
         <td mat-cell *matCellDef="let element">{{ element.status }}</td>
       </ng-container>
-
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let element">
           <button mat-button (click)="viewDetails(element)">View Details</button>
         </td>
       </ng-container>
-
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns; trackBy: trackById" (click)="viewDetails(row)"></tr>
     </table>
